--- a/src/pages/posts/2025-books/index.mdx
+++ b/src/pages/posts/2025-books/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: '2025 in the Books'
 date: 2025-12-31
-tags: ['post']
+tags: ['draft']
 excerpt: 'A bunch of things I read in 2025.'
 ---
 import data from './2025-books.11tydata.json';
@@ -13,7 +13,7 @@ import data from './2025-books.11tydata.json';
 
 <div class="ui divided items">
 
-{data.books2024.map((book) => (
+{data.books2025.map((book) => (
 	<div class="item">
 			<div class="image">
 				<img src={`/assets/books/${book.isbn}.jpg`} alt={book.title} />
