--- a/src/pages/posts/hexadecimal-color/index.mdx
+++ b/src/pages/posts/hexadecimal-color/index.mdx
@@ -100,7 +100,7 @@ And with that we can create a rudimentary decimal (base<sub>10</sub>) to hexadec
 ```
 
 
-<Calc />
+<Calc client:load />
 
 ### Hex Colors represent RGB.
 
