clean up syntax

--- a/src/pages/posts/svg-path-data-in-canvas/index.mdx
+++ b/src/pages/posts/svg-path-data-in-canvas/index.mdx
@@ -49,7 +49,7 @@ const p = new Path2D('M150 10 L115 70 L185 70 Z');
 ctx1.stroke(p);
 ```
 
-<canvas width="300" height="80" id="ex2" style="background: white;"></canvas>
+<canvas width="300" height="80" id="ex2" style="background: white;" class="mt3"></canvas>
 
 
 <script>
@@ -74,7 +74,7 @@ ctx.stroke(p);
 ```
 
 
-<canvas width="300" height="80" id="ex3" style="background: white;"></canvas>
+<canvas width="300" height="80" id="ex3" style="background: white;" class="mt3"></canvas>
 
 
 <script type="module">
@@ -89,7 +89,7 @@ ctx.stroke(p);
 
 And with that we're off to the races. This next part is a bit ["draw the rest of the fucking owl"](https://www.reddit.com/r/restofthefuckingowl/)
 
-<canvas width="300" height="80" id="ex4" style="background: white;"></canvas>
+<canvas width="300" height="80" id="ex4" style="background: white;" class="mt4 mv4"></canvas>
 
 ```js
 import Path from "@joemaddalone/path";
