--- a/src/pages/posts/self-hosted-setup/index.mdx
+++ b/src/pages/posts/self-hosted-setup/index.mdx
@@ -23,7 +23,7 @@ I've always had a media server setup running in our house, but during the pandem
 _With the exception of Snapraid and MergerFS these are all running in docker and are accessed in a browser._
 
 {data.apps.map((app) => (
-	<div class="ui segment">
+	<div class="text-black mt-4 border-1 rounded-md border-gray-200 shadow-sm p-4">
 	<div class="flex justify-between">
 		<a href={app.url}>{app.app}</a>
 	</div>
