--- a/src/pages/posts/2022-books/index.mdx
+++ b/src/pages/posts/2022-books/index.mdx
@@ -15,16 +15,16 @@ import data from './2022-books.11tydata.json';
 
 {data.books2022.map((book) => (
 
-<div class="item">
-		<div class="image">
-			<img src={`/assets/books/${book.isbn}.jpg`} alt={book.title} />
-		</div>
-		<div class="content">
-			<div class="header">{book.title}</div>
-			<div class="meta i">{book.subtitle}</div>
-			<div class="meta pt2">{book.author}</div>
-		</div>
-</div>
+	<div class="pl-2 pt-6">
+			<span class="flex items-center">
+				<span class="shrink-0 pe-4 text-lg text-gray-900">{book.title}</span>
+				<span class="h-px flex-1 bg-gray-300"></span>
+			</span>
+			<span class="italic text-black">{book.subtitle ? `${book.subtitle}` : ''}</span>
+			<div class="max-w-[175px] mx-auto">
+				<img src={`/assets/books/${book.isbn}.jpg`} alt={book.title} class="w-[100%] h-auto" />
+			</div>
+	</div>
 
 ))}
 </div>
