--- a/src/pages/posts/svg-path-data-in-canvas/index.mdx
+++ b/src/pages/posts/svg-path-data-in-canvas/index.mdx
@@ -26,7 +26,7 @@ ctx.stroke();
 ```
 This gives us a triangle.
 
-<canvas width="300" height="80" id="ex1" style="background: white;"></canvas>
+<canvas width="300" height="80" id="ex1" class="bg-white border border-gray-200"></canvas>
 
 
 <script>
@@ -49,7 +49,7 @@ const p = new Path2D('M150 10 L115 70 L185 70 Z');
 ctx1.stroke(p);
 ```
 
-<canvas width="300" height="80" id="ex2" style="background: white;" class="mt3"></canvas>
+<canvas width="300" height="80" id="ex2" class="mt-3 bg-white border border-gray-200"></canvas>
 
 
 <script>
@@ -74,7 +74,7 @@ ctx.stroke(p);
 ```
 
 
-<canvas width="300" height="80" id="ex3" style="background: white;" class="mt3"></canvas>
+<canvas width="300" height="80" id="ex3" class="mt-3 bg-white border border-gray-200"></canvas>
 
 
 <script type="module">
@@ -83,13 +83,13 @@ ctx.stroke(p);
 	const ctx2 = c2.getContext('2d');
 	const p1 = new Path2D(new path().triangle(70, 150, 50).toString());
 	ctx2.stroke(p1);
-`}	
+`}
 </script>
 
 
 And with that we're off to the races. This next part is a bit ["draw the rest of the fucking owl"](https://www.reddit.com/r/restofthefuckingowl/)
 
-<canvas width="300" height="80" id="ex4" style="background: white;" class="mt4 mv4"></canvas>
+<canvas width="300" height="80" id="ex4" class="mt-4 mb-4 bg-white border border-gray-200"></canvas>
 
 ```js
 import Path from "@joemaddalone/path";
