--- a/src/pages/posts/man-from-earth/index.mdx
+++ b/src/pages/posts/man-from-earth/index.mdx
@@ -5,22 +5,29 @@ tags: ['post', 'film']
 excerpt: 'An overlooked science fiction master class'
 ---
 
+import FilmWidget from '../../../components/FilmWidget.jsx';
+import ManFromEarth from '../../../../public/assets/films/13363-The-Man-from-Earth/data.json';
+
 <hgroup>
 	<h1>The Man From Earth</h1>
 	<p>An overlooked science fiction master class</p>
 </hgroup>
 
-<div class="ui small right floated image mpa3">
-
-![The Man From Earth](./poster.png)
+<div class="mt-6">
+	<div>
+		According to lore, Jerome Bixby spent four decades writing the screenplay for The Man From Earth, starting some time during the 1960's and completing it on his deathbed in April 1998 by dictating the last of it to his son, Emerson. Bixby was the author of numerous short stories and screenplays including the notable The Twilight Zone episode "It's a Good Life" (1953), a 2004 finalist for the 1954 Retro-Hugo Award for Best Short Story. He is most widely known for penning four episodes of the original Star Trek series.
+	</div>
+	<div class="max-w-sm mx-auto">
+		<FilmWidget filmData={ManFromEarth} posterPath={`/assets/films/13363-The-Man-from-Earth/poster.jpg`} />
+	</div>
 </div>
 
-According to lore, Jerome Bixby spent four decades writing the screenplay for The Man From Earth, starting some time during the 1960's and completing it on his deathbed in April 1998 by dictating the last of it to his son, Emerson. Bixby was the author of numerous short stories and screenplays including the notable The Twilight Zone episode "It's a Good Life" (1953), a 2004 finalist for the 1954 Retro-Hugo Award for Best Short Story. He is most widely known for penning four episodes of the original Star Trek series.
+
 
 
 The Man From Earth is a 2007 science fiction film that tells the story a college professor, John Oldman, who claims to be a Cro-Magnon who has lived for over 14,000 years. The entire film transpires in a single setting where John reveals his identity to colleagues who are skeptical of his claims and try to prove his statement a prank or him insane. John's colleagues are comprised of Harry the biologist, Edith the art history professor and devout Christian, Dan the anthropologist, Sandy the historian, Art the archaeologist, Will the psychiatry professor, and Linda the young student.
 
-<div class="flex align-center fluid image justify-center ma3">
+<div class="flex align-center fluid image justify-center m-3">
 
 ![The Man From Earth](./scene.jpg)
 
