revamp home page

--- a/src/pages/posts/ai-timeline/index.mdx
+++ b/src/pages/posts/ai-timeline/index.mdx
@@ -3,6 +3,7 @@ title: 'An AI Timeline'
 date: 2024-01-08
 tags: ['post']
 excerpt: 'A timeline of AI events.'
+short: 'AI Timeline'
 ---
 
 import Timeline from '../../../components/Timeline';
