--- a/src/pages/posts/hexadecimal-color/index.mdx
+++ b/src/pages/posts/hexadecimal-color/index.mdx
@@ -3,6 +3,7 @@ title: 'Hexadecimal Color'
 date: 2022-01-16
 tags: ['post']
 excerpt: 'How hexadecimal color works.'
+short: 'Hex Color'
 ---
 
 import Red from './red.jsx';
