--- a/src/pages/posts/movies-overlooked-2024/index.mdx
+++ b/src/pages/posts/movies-overlooked-2024/index.mdx
@@ -3,6 +3,7 @@ title: '2024 movies you may have overlooked'
 date: 2025-01-20
 tags: ['post']
 excerpt: 'forgotten on award night...'
+short: '2024 Movies'
 ---
 
 import FilmWidget from '../../../components/FilmWidget.jsx';
