--- a/src/pages/posts/rethinking-the-developer-career-path/index.mdx
+++ b/src/pages/posts/rethinking-the-developer-career-path/index.mdx
@@ -3,6 +3,7 @@ title: 'Rethinking the Developer Career Path'
 date: 2021-12-04
 tags: ['post']
 excerpt: 'A really interesting perspective on this age old problem.'
+short: 'Career path'
 ---
 import { YouTube } from '@astro-community/astro-embed-youtube';
 
