--- a/src/pages/posts/self-hosted-setup/index.mdx
+++ b/src/pages/posts/self-hosted-setup/index.mdx
@@ -3,6 +3,7 @@ title: 'My self-hosted stuff'
 date: 2022-03-14
 tags: ['post']
 excerpt: 'Hosting all the things from a closet.'
+short: 'self-hosted'
 ---
 import data from './self-hosted-setup.11tydata.json';
 import Diagram from './homeserver/diagram.jsx';
