--- a/src/pages/posts/2022-books/index.mdx
+++ b/src/pages/posts/2022-books/index.mdx
@@ -3,6 +3,7 @@ title: '2022 in the Books'
 date: 2022-11-29
 tags: ['post']
 excerpt: 'A bunch of things I read.'
+short: '2022 Books'
 ---
 import data from './2022-books.11tydata.json';
 import BookWidget from '../../../components/BookWidget.jsx';
