--- a/src/pages/posts/2023-books/index.mdx
+++ b/src/pages/posts/2023-books/index.mdx
@@ -3,6 +3,7 @@ title: '2023 in the Books'
 date: 2023-12-31
 tags: ['post']
 excerpt: 'A bunch of things I read in 2023.'
+short: '2023 Books'
 ---
 import data from './2023-books.11tydata.json';
 import BookWidget from '../../../components/BookWidget.jsx';
