--- a/src/pages/posts/2024-books/index.mdx
+++ b/src/pages/posts/2024-books/index.mdx
@@ -3,6 +3,7 @@ title: '2024 in the Books'
 date: 2024-12-31
 tags: ['post']
 excerpt: 'A bunch of things I read in 2024.'
+short: '2024 Books'
 ---
 import BookWidget from '../../../components/BookWidget.jsx';
 import data from './2024-books.11tydata.json';
