--- a/src/pages/posts/rewatchables/index.mdx
+++ b/src/pages/posts/rewatchables/index.mdx
@@ -3,6 +3,7 @@ title: 'Rewatchables'
 date: 2024-05-03
 tags: ['post']
 excerpt: 'my list of lesser-discussed rewatchable films'
+short: 'I Rewatch Movies'
 ---
 import FilmWidget from '../../../components/FilmWidget.jsx';
 import Affliction from '../../../../public/assets/films/31662-Affliction/data.json';
