--- a/src/pages/posts/proxy-reactivity/index.mdx
+++ b/src/pages/posts/proxy-reactivity/index.mdx
@@ -346,12 +346,56 @@ const minus = document.querySelector('#minus');
 minus.addEventListener('click', () => {
 	count.value--;
 });
+
+
+
+
 `}
 </script>
 
 By no means is this a production-ready solution, but it's a fun way to learn about the Proxy object and how to use it to create a simple reactive system.
 
+<hr />
 
+### TKAdjustableNumber (just for fun)
 
+<p class="select-none">When you eat <span id="cookies" class=" text-blue-500 font-bold underline decoration-dotted cursor-col-resize">3 cookies</span>,
+you consume <span id="calories" class="font-bold">150</span> calories. That's <span id="percentage" class="font-bold">7</span>%
+of your recommended daily calories.</p>
+
+<script>
+{`
+const cookieCount = s.useState(0);
+
+cookieCount.listen((value) => {
+  document.querySelector('#cookies').textContent = value + ' cookies';
+  document.querySelector('#calories').textContent = value * 50;
+  document.querySelector('#percentage').textContent = (value * 50 / 2000 * 100).toFixed(2);
+});
+
+const cookie = document.querySelector('#cookies');
+
+const mover = (e) => {
+  // if move right, increment
+  if (e.movementX > 0) {
+    cookieCount.value++;
+  }
+  // if move left, decrement
+  if (e.movementX < 0) {
+    if (cookieCount.value > 2) {
+      cookieCount.value = cookieCount.value-1;
+    }
+  }
+};
+
+cookie.addEventListener('mousedown', (e) => {
+  document.addEventListener('mousemove', mover);
+  document.addEventListener('mouseup', (e) => {
+    document.removeEventListener('mousemove', mover);
+  });
+});
+
+`}
+</script>
 
 
