--- a/src/pages/posts/proxy-reactivity/index.mdx
+++ b/src/pages/posts/proxy-reactivity/index.mdx
@@ -377,11 +377,11 @@ const cookie = document.querySelector('#cookies');
 
 const mover = (e) => {
   // if move right, increment
-  if (e.movementX > 0) {
+  if (e.movementX > 0 || e.movementY < 0) {
     cookieCount.value++;
   }
   // if move left, decrement
-  if (e.movementX < 0) {
+  if (e.movementX < 0 || e.movementY > 0) {
     if (cookieCount.value > 2) {
       cookieCount.value = cookieCount.value-1;
     }
