--- a/src/pages/posts/dspy-ax/index.mdx
+++ b/src/pages/posts/dspy-ax/index.mdx
@@ -5,11 +5,19 @@ tags: ['post']
 excerpt: 'DSPy signatures in ax-llm and how they eliminate brittle prompts.'
 short: 'DSPy > Prompt'
 ---
+import { YouTube } from '@astro-community/astro-embed-youtube';
 
 <hgroup>
 	<h1>DSPy Signatures</h1>
 	<p>DSPy signatures in ax-llm.</p>
 </hgroup>
+
+
+
+<div class="pt-6">
+<YouTube id="GepX6R6LHgM" />
+</div>
+
 
 ## The problem with prompts
 
