--- a/src/pages/posts/2025-books/index.mdx
+++ b/src/pages/posts/2025-books/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: '2025 in the Books'
 date: 2025-12-31
-tags: ['draft']
+tags: ['post']
 excerpt: 'A bunch of things I read in 2025.'
 ---
 import data from './2025-books.11tydata.json';
